<resources>
    <string name="app_name" translatable="false">SMS Drive</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <string name="settings_sync" translatable="false">settings_sync</string>
    <string name="settings_pref_userphno" translatable="false">pref_userphno</string>
    <string name="settings_pref_username" translatable="false">pref_username</string>
    <string name="settings_pref_useremail" translatable="false">pref_useremail</string>
    <string name="settings_pref_userage" translatable="false">pref_userage</string>
    <string name="settings_pref_last_sync" translatable="false">pref_last_sync</string>

    <!-- Preference Titles -->
    <string name="sync_header" translatable="false">Sync</string>

    <string name="user_name" translatable="false">User Name</string>

    <!-- Sync Preferences -->
    <string name="settings_sync_interval" translatable="false">settings_sync_interval</string>

    <string name="sync_interval" translatable="false">Sync Interval</string>
    <string name="sync_interval_summary" translatable="false">Choose how offen app will sync with cloud</string>

    <string name="auto_sync_off_summary" translatable="false">SMS in Device Will Not Auto-Backup</string>
    <string name="auto_sync_on_summary" translatable="false">SMS will be Auto-Backup</string>
    <string name="auto_sync" translatable="false">Auto Sync</string>
    <string name="profile" translatable="false">Profile</string>

    <string name="social_media_fb" translatable="false">https://www.facebook.com/ephrineapps</string>
    <string name="social_media_twitter" translatable="false">https://twitter.com/ephrineapps</string>
    <string name="social_media_instagram" translatable="false">https://www.instagram.com/ephrineapps</string>
    <string name="social_media_linkedin" translatable="false">https://www.linkedin.com/company/ephrine</string>
    <string name="social_media_youtube" translatable="false">https://www.youtube.com/channel/UCO-OX7K3zIeY05HaIAu3HRw</string>

    <string name="delete_books_summary" translatable="false">Erase all your Messages on Backup Drive</string>

    <string name="file_cloud_sms" translatable="false">file_cloud_sms</string>
    <string name="file_cloud_thread" translatable="false">file_cloud_thread</string>
    <string name="file_device_sms" translatable="false">file_device_sms</string>

    <string name="app_desc_short" translatable="false">Keep your Messages Safe &amp; Backup</string>
    <string name="last_sync_at" translatable="false">Last Synced at</string>

    <!--Purchase Strings-->
    <string name="cache_Sub_PurchaseToken" translatable="false">cachepurchasetoken</string>
    <string name="cache_Sub_ProductId" translatable="false">cacheproductid</string>
    <string name="cache_Sub_OrderId" translatable="false">cacheorderid</string>
    <string name="cache_Sub_PurchaseTimeMillis" translatable="false">cachepurchasetimemillis</string>
    <string name="cache_Sub_PurchaseTime" translatable="false">cachepurchasetime</string>
    <string name="cache_Sub_isSubscribe" translatable="false">cachesubissubscribe</string>
    <string name="cache_Sub_Details_Price" translatable="false">cachesubdetailsprice</string>

    <string name="my_subscription" translatable="false">My Subscription</string>

    <string name="DATABASE_SMS_DB" translatable="false">database-sms</string>
    <string name="DATABASE_CLOUD_SMS_DB" translatable="false">database-cloud-sms</string>

    <!--
    0= none task
    1= cloud sorting msg task
    -->
    <string name="BG_Task_Status" translatable="false">BGTaskStatus</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="ARG_ACCOUNT_TYPE" translatable="false">accountType</string>
    <string name="ARG_AUTH_TOKEN_TYPE" translatable="false">authTokenType</string>
    <string name="ARG_IS_ADDING_NEW_ACCOUNT" translatable="false">isAddingNewAccount</string>
    <string name="PARAM_USER_PASSWORD" translatable="false">password</string>
    <string name="default_notification_channel_id" translatable="false">010</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="FCM_Notifications_Data" translatable="false">fcmdatapayload</string>

    <string name="GalaxyUpdateURL" translatable="false">http://apps.samsung.com/appquery/appDetail.as?appId=devesh.ephrine.backup.sms</string>
    <string name="DATABASE_THREAD_SMS_DB" translatable="false">threadsmsdatabase</string>

    <string name="disable_ads" translatable="false">Personalise in-app Ads</string>
    <string name="App_InstanceID" translatable="false">appinstanceid</string>

    <string name="Admob_TestDeviceID" translatable="false">D7D25A835A1A43446353F5BEC7C2B635</string>
</resources>